--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,17 @@
 Package: iemand
 Version: 0.0.0.9000
 Title: Iemand
-Description: Creates fake people
+Description: Creates fake people.
 Authors@R: person("Lara", "Basson", email = "laraebasson@gmail.com", role= c("aut", "cre"))
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 ByteCompile: true
 RoxygenNote: 6.0.1
+Depends: R (>= 3.0.1)
 Suggests: 
     testthat
 Imports: 
     praise,
-    magrittr
+    magrittr,
+    dplyr
